# org_network_analysis

./: .gitignore  API.md  CHANGELOG.md  CONTRIBUTING.md  DELETE_LIST  Dockerfile  GETTING_STARTED.md  MIGRATION_UV.md  PRODUCTION_AUDIT.md  PROD_HARDENING_CHECKLIST.md  README.md  TECH_DEBT_REGISTER.md  TESTING.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  env.example  pyproject.toml  requirements.txt  setup.py
alembic/: env.py
app/: __init__.py  app.py  config.py  date_utils.py  examples.py  export_utils.py  formatters.py  utils.py  validation.py  validators.py
app/business_logic/: __init__.py  three_es_calculator.py
app/data_access/: repositories.py
tests/: conftest.py  test_api.py  test_calculator.py  test_integration_e2e.py  test_network_analyzer.py  test_network_structural_anomalies.py  test_performance.py
