[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orgnet-three-es"
version = "1.0.0"
description = "Three E's Organizational Network Analysis - Measure Energy, Engagement, and Exploration based on MIT research"
readme = "README.md"
authors = [
    {name = "OrgNet Team"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Office/Business",
]
requires-python = ">=3.12"
dependencies = [
    "Flask>=3.0.0",
    "Flask-CORS>=4.0.0",
    "Flask-Limiter>=3.5.0",
    "SQLAlchemy>=2.0.23",
    "alembic>=1.13.1",
    "pandas>=2.1.4",
    "numpy>=1.26.2",
    "networkx>=3.2.1",
    "pydantic[email]>=2.5.3",
    "python-dotenv>=1.0.0",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-flask>=1.3.0",
    "pytest-benchmark>=4.0.0",
    "pytest-xdist>=3.5.0",
    "black>=23.12.1",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "safety>=3.0.1",
    "bandit>=1.7.6",
]

[project.urls]
Homepage = "https://github.com/kylejones200/org_network_analysis"
Documentation = "https://github.com/kylejones200/org_network_analysis/blob/main/README.md"
Repository = "https://github.com/kylejones200/org_network_analysis"
Issues = "https://github.com/kylejones200/org_network_analysis/issues"

[tool.setuptools]
packages = ["app", "app.database", "app.data_access", "app.business_logic"]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | alembic
)/
'''

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "performance: marks tests as performance tests",
    "benchmark: marks tests as benchmark tests",
]

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/alembic/*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if False:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "alembic/",
    "tests/",
]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "venv",
    "alembic",
]
max-complexity = 10
